<resources>
    <string name="app_name">Books</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_sell_a_book">Sell A Book</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_my_settings">Settings</string>
    <string name="menu_my_books">My Books</string>
    <string name="menu_book_details">Book Details</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="loremShort">Condimentum scelerisque diam erat nunc suspendisse erat nunc nunc elit eget adipiscing metus felis varius felis massa enim phasellus nisl adipiscing ac quis quam elit.</string>
    <string name="lorem">Condimentum scelerisque diam erat nunc suspendisse erat nunc nunc elit eget adipiscing metus felis varius felis massa enim phasellus nisl adipiscing ac quis quam elit. \n\nMorbi leo lorem sollicitudin interdum vel tristique quis portaest ipsum sed tortor orci consectetur nunc id felis leo elit gravida hendrerit phasellus id aliquam enim. \n\n Phasellus gravida fusce vel quis tristique sem scelerisque tincidunt interdum metus arcu maximus felis suspendisse enim euismod felis erat massa et arcu gravida quisque purus.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_a_seller">Select A Seller</string>
    <string name="prompt_full_name">Full Name</string>
    <string name="action_sign_up">Register</string>
</resources>
